toolchain/internal/core/analysis/testdata/errors/includes/import_vdl_config/main.vdl
// @expect: E007

include "./vdl.config.vdl"

type MainType {
  name string
}
